re PR java/14315 ([3.4 only]: Java compiler is not parallel make safe)

2004-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR java/14315
	Backport from mainline:

	2004-03-23  Tom Tromey  <tromey@redhat.com>

	* jcf-write.c (make_class_file_name): Don't report if mkdir
	failed with EEXIST.

From-SVN: r82060